# sqlc-gen-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  compose.yml  flake.nix  rust-toolchain.toml
examples/: sqlc.dev.yaml
examples/authors/: sqlc.dev.yaml
examples/authors-sqlx/: Cargo.toml  sqlc.dev.yaml
examples/authors-sqlx/src/: lib.rs  plugin-request.json  queries.rs
examples/authors/db/: plugin-request.json
examples/authors/sqlx/src/db/: plugin-request.json  queries.rs
examples/axum-social-with-tests/: .env  Cargo.toml  README.md  sqlc.dev.yaml
examples/axum-social-with-tests/src/: lib.rs
examples/axum-social-with-tests/src/db/: plugin-request.json  queries.rs  queries.sql
examples/axum-social-with-tests/src/http/: mod.rs  user.rs
examples/axum-social-with-tests/src/http/post/: comment.rs  mod.rs
examples/axum-social-with-tests/tests/: comment.rs  common.rs  post.rs  user.rs
examples/kitchen-sink-riverqueue/: Cargo.toml  README.md  sqlc.dev.yaml
examples/kitchen-sink-riverqueue/queries/: plugin-request.json  queries.rs  sqlc.dev.yaml
examples/kitchen-sink-riverqueue/src/: plugin-request.json  queries.rs
examples/sqlx/src/db/: queries.rs
src/: codegen.rs  ident.rs  main.rs
