[package]
name = "sqlc-gen-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
elsa = "1.10.0"
heck = "0.5.0"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
prost = "0.13.3"
quote = "1.0.37"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = "2.0.79"

[build-dependencies]
prost-build = "0.13.3"
